--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Manish-162403/project-productsManagementGroup10#readme",
   "dependencies": {
     "aws-sdk": "^2.1111.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
